--- a/style.css
+++ b/style.css
@@ -217,6 +217,10 @@ a:hover {
         flex-direction: column-reverse;
         gap: 15px;
     }
+    .contact:last-child {
+        margin-left: 0;
+        margin-bottom: 15px;
+    }
     .title {
         font-size: 1.5rem;
     }
