--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@ a:hover {
     padding-left: 5rem;
 }
 
+h1.title {
+    font-size: 3rem;
+}
+
 .title {
     font-size: 3rem;
 }
@@ -192,7 +196,6 @@ a:hover {
 }
 
 @media only screen and (max-width: 769px) {
-
     .section-hero.desctp {
         display: none;
     }
@@ -212,6 +215,9 @@ a:hover {
     .section-hero .title {
         padding-bottom: 3rem;
     }
+    .section-hero .img-mob {
+        width: 90%;
+    }
     .contact-wrapper {
         justify-content: center;
         flex-direction: column-reverse;
@@ -220,6 +226,9 @@ a:hover {
     .contact:last-child {
         margin-left: 0;
         margin-bottom: 15px;
+    }
+    h1.title {
+        font-size: 1.5rem;
     }
     .title {
         font-size: 1.5rem;
@@ -242,11 +251,13 @@ a:hover {
         border-image-source: linear-gradient(180deg, rgba(72, 70, 73, 1) 18%, rgba(254, 83, 57, 1) 52%, rgba(255, 213, 65, 1) 100%);
     }
     .price {
-        padding: 100px 15px;
+        padding: 50px 15px;
     }
     .price-wrapper {
         flex-direction: column-reverse;
-      
         align-items: center;
+    }
+    .contact-link {
+        font-size: 1rem;
     }
 }
