--- a/style.css
+++ b/style.css
@@ -195,6 +195,21 @@ h1.title {
     display: block;
 }
 
+@media only screen and (max-width: 1340px) {
+    .contact-wrapper {
+        justify-content: center;
+        flex-direction: column-reverse;
+        gap: 15px;
+    }
+    .contact:last-child {
+        margin-left: 0;
+        margin-bottom: 15px;
+    }
+    .contact-link {
+        font-size: 1rem;
+    }
+}
+
 @media only screen and (max-width: 769px) {
     .section-hero.desctp {
         display: none;
@@ -217,15 +232,6 @@ h1.title {
     }
     .section-hero .img-mob {
         width: 90%;
-    }
-    .contact-wrapper {
-        justify-content: center;
-        flex-direction: column-reverse;
-        gap: 15px;
-    }
-    .contact:last-child {
-        margin-left: 0;
-        margin-bottom: 15px;
     }
     h1.title {
         font-size: 1.5rem;
@@ -259,8 +265,5 @@ h1.title {
     .price-wrapper {
         flex-direction: column-reverse;
         align-items: center;
-    }
-    .contact-link {
-        font-size: 1rem;
     }
 }
