--- a/style.css
+++ b/style.css
@@ -208,6 +208,10 @@ h1.title {
     .contact-link {
         font-size: 1rem;
     }
+    .price-wrapper {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
 }
 
 @media only screen and (max-width: 769px) {
