--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500&display=swap");
 :root {
     --white: #fafafa;
     --black: #484649;
-    --yellow: #F7B731;
+    --yellow: #f7b731;
 }
 
 * {
@@ -12,7 +12,7 @@
 }
 
 html {
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     scroll-behavior: smooth;
     font-size: 16px;
     color: var(--black);
@@ -98,7 +98,8 @@ h1.title {
     background-color: var(--yellow);
     border-color: var(--yellow);
 }
-.contact:first-child{
+
+.contact:first-child {
     border: none;
     background-color: transparent;
 }
@@ -107,7 +108,7 @@ h1.title {
     position: absolute;
     margin: 0 auto;
     bottom: 15px;
-    opacity: .25;
+    opacity: 0.25;
     animation: pulse 2s linear alternate infinite;
 }
 
@@ -133,7 +134,7 @@ h1.title {
 }
 
 .explain-item:hover {
-    border-image-source: linear-gradient(180deg, rgba(72, 70, 73, 1) 18%, rgba(254, 83, 57, 1) 52%, rgba(255, 213, 65, 1) 100%);
+    border-image-source: linear-gradient( 180deg, rgba(72, 70, 73, 1) 18%, rgba(254, 83, 57, 1) 52%, rgba(255, 213, 65, 1) 100%);
     transform: scale(1.05);
 }
 
@@ -219,7 +220,7 @@ h1.title {
     }
 }
 
-@media only screen and (max-width: 769px) {
+@media only screen and (max-width: 835px) {
     .section-hero.desctp {
         display: none;
     }
@@ -231,7 +232,6 @@ h1.title {
         grid-template-rows: 1fr 1fr;
         align-items: unset;
         padding-top: 100px;
-        height: 100vh;
     }
     .wrapper-item {
         padding: 15px;
@@ -266,7 +266,7 @@ h1.title {
         grid-template-rows: 3fr;
     }
     .explain-item {
-        border-image-source: linear-gradient(180deg, rgba(72, 70, 73, 1) 18%, rgba(254, 83, 57, 1) 52%, rgba(255, 213, 65, 1) 100%);
+        border-image-source: linear-gradient( 180deg, rgba(72, 70, 73, 1) 18%, rgba(254, 83, 57, 1) 52%, rgba(255, 213, 65, 1) 100%);
     }
     .price {
         padding: 50px 15px;
@@ -276,13 +276,19 @@ h1.title {
         align-items: center;
     }
 }
-@media only screen and (max-width: 420px) {
-    .explanation{
-        padding-top: 12.5rem;
+
+@media only screen and (max-width: 575px) {
+    .section-hero.mob {
+        padding-bottom: 5rem;
+    }
+    .wrapper {
+        padding-top: 25px;
     }
 }
+
 @media only screen and (max-width: 320px) {
-    .explanation{
-        padding-top: 21rem;
+
+    .section-hero.mob {
+        padding-bottom: 13rem;
     }
 }
