--- a/style.css
+++ b/style.css
@@ -175,6 +175,19 @@ h1.title {
     padding-top: 3rem;
 }
 
+.section-hero.mob {
+    display: none;
+}
+
+.section-hero.desctp {
+    display: block;
+}
+
+.img-girl {
+    width: 100%;
+    height: auto;
+}
+
 @keyframes pulse {
     to {
         opacity: 1;
@@ -191,14 +204,6 @@ h1.title {
     100% {
         transform: scale(1);
     }
-}
-
-.section-hero.mob {
-    display: none;
-}
-
-.section-hero.desctp {
-    display: block;
 }
 
 @media only screen and (max-width: 1340px) {
@@ -276,6 +281,7 @@ h1.title {
         align-items: center;
     }
 }
+
 @media only screen and (max-width: 420px) {
     .section-hero.mob {
         padding-bottom: 5rem;
@@ -286,7 +292,6 @@ h1.title {
 }
 
 @media only screen and (max-width: 320px) {
-
     .section-hero.mob {
         padding-bottom: 13rem;
     }
